--- a/.github/workflows/run_regression_models.yml
+++ b/.github/workflows/run_regression_models.yml
@@ -1,15 +1,21 @@
-# .github/workflows/report-unmatched-scores.yml
-name: Report Unmatched Scores (CFB)
+# .github/workflows/run_regression_models.yml
+name: Run Regression Models (CFB)
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch:        # allow manual trigger
+  schedule:                 # automatic weekly run (optional)
+    - cron: "0 17 * * 2"    # 17:00 UTC = 12:00 PM ET (Tuesdays)
 
 permissions:
   contents: write
 
 jobs:
-  scores:
+  run-models:
     runs-on: ubuntu-latest
+    env:
+      PYTHONUNBUFFERED: "1"   # print logs immediately
+      SEASON_MIN: "2019"
+      SEASON_MAX: "2025"
 
     steps:
       - name: Checkout
@@ -24,54 +30,61 @@ jobs:
 
       - name: Install dependencies
         run: |
-          set -e
           python -m pip install --upgrade pip
-          pip install pandas python-dateutil
+          python -m pip install numpy pandas scikit-learn joblib requests
 
-      - name: Ensure folders exist
+      # We rely on data/modeling_dataset.csv as the authoritative dataset.
+      # These fetch/clean steps are intentionally omitted to avoid slow CFBD calls.
+
+      - name: Inspect dataset (sanity check)
         run: |
           set -e
-          mkdir -p data data/scores data/diagnostics
-
-      - name: Fetch raw scores
-        run: |
-          set -e
-          if [ -f scripts/fetch_game_scores_cfbd.py ]; then
-            echo "Using scripts/fetch_game_scores_cfbd.py"
-            python scripts/fetch_game_scores_cfbd.py --out data/game_scores.csv
-          elif [ -f scripts/fetch_game_scores.py ]; then
-            echo "Using scripts/fetch_game_scores.py"
-            python scripts/fetch_game_scores.py --out data/game_scores.csv
-          else
-            echo "ERROR: No fetch script found. Expected scripts/fetch_game_scores_cfbd.py or scripts/fetch_game_scores.py"
+          if [ ! -f data/modeling_dataset.csv ]; then
+            echo "ERROR: data/modeling_dataset.csv not found."
             exit 2
           fi
-          test -s data/game_scores.csv || (echo "ERROR: data/game_scores.csv not created or empty." && exit 3)
-          echo "--- head(data/game_scores.csv) ---"
-          head -n 10 data/game_scores.csv || true
-          echo "--- wc(data/game_scores.csv) ---"
-          wc -l data/game_scores.csv || true
+          echo "==> modeling_dataset.csv (head)"
+          head -n 20 data/modeling_dataset.csv || true
+          echo "==> Row count:"
+          wc -l data/modeling_dataset.csv || true
 
-      - name: Clean & dedupe scores
+      - name: Execute regression script
+        env:
+          TARGET_COL: points_scored
+          EXCLUDE_TARGET_REGEX: '(?i)^(?!points_scored$).*(points?|scores?|margin|spread)$'
+          # NOTE: No SCORES_CSV here. The runner will use points_scored already in modeling_dataset.csv.
         run: |
           set -e
-          if [ -f scripts/clean_scores_unique_by_id.py ]; then
-            python scripts/clean_scores_unique_by_id.py --in data/game_scores.csv --out data/game_scores_clean.csv
+          echo "==> Running regression with TARGET_COL=${TARGET_COL}"
+          python scripts/run_regression_models.py
+
+          echo '--- logs_model_regression.txt ---'
+          if [ -f logs_model_regression.txt ]; then
+            tail -n 200 logs_model_regression.txt
           else
-            echo "ERROR: scripts/clean_scores_unique_by_id.py not found."
-            exit 4
+            echo "logs_model_regression.txt not found."
           fi
-          test -s data/game_scores_clean.csv || (echo "ERROR: data/game_scores_clean.csv not created or empty." && exit 5)
-          cp -f data/game_scores_clean.csv data/scores/game_scores_clean.csv
-          cp -f data/game_scores_clean.csv data/scores/scores.csv
-          echo "--- head(data/game_scores_clean.csv) ---"
-          head -n 10 data/game_scores_clean.csv || true
-          echo "--- wc(data/game_scores_clean.csv) ---"
-          wc -l data/game_scores_clean.csv || true
-          echo "SCORES UPDATED ✅"
-          echo "• data/game_scores_clean.csv"
-          echo "• data/scores/game_scores_clean.csv"
-          echo "• data/scores/scores.csv"
+
+          echo '--- data/model_regression_metrics.csv ---'
+          if [ -f data/model_regression_metrics.csv ]; then
+            cat data/model_regression_metrics.csv
+          else
+            echo "data/model_regression_metrics.csv not found."
+          fi
+
+          echo '--- data/model_regression_coeffs.csv (first 40 rows) ---'
+          if [ -f data/model_regression_coeffs.csv ]; then
+            head -n 40 data/model_regression_coeffs.csv
+          else
+            echo "data/model_regression_coeffs.csv not found."
+          fi
+
+          echo '--- model artifacts ---'
+          if [ -d models ]; then
+            ls -lh models || true
+          else
+            echo "models/ directory not found."
+          fi
 
       - name: Commit and push artifacts
         run: |
@@ -80,16 +93,16 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --global --add safe.directory "$GITHUB_WORKSPACE"
 
-          git add -f data/game_scores.csv || true
-          git add -f data/game_scores_clean.csv || true
-          git add -f data/scores/game_scores_clean.csv || true
-          git add -f data/scores/scores.csv || true
-          git add -f data/diagnostics/*.csv 2>/dev/null || true
+          # Stage each file individually to avoid fragile line continuations.
+          [ -f logs_model_regression.txt ] && git add -f logs_model_regression.txt || true
+          [ -f data/model_regression_metrics.csv ] && git add -f data/model_regression_metrics.csv || true
+          [ -f data/model_regression_coeffs.csv ] && git add -f data/model_regression_coeffs.csv || true
+          # models may not exist or the glob may expand empty; silence errors.
+          git add -f models/*.pkl 2>/dev/null || true
 
           if git diff --cached --quiet; then
-            echo "No changes to commit."
-            git status --porcelain
+            echo "No changes to commit (artifacts unchanged)."
           else
-            git commit -m "Update scores (raw+clean) and diagnostics [skip ci]"
-            git push origin "${GITHUB_REF_NAME:-main}"
+            git commit -m "Add regression metrics, coeffs, and model artifacts [skip ci]"
+            git push
           fi
