--- a/.github/workflows/build_modeling_dataset.yml
+++ b/.github/workflows/build_modeling_dataset.yml
@@ -59,63 +59,38 @@ jobs:
           [ -f data/modeling_dataset.csv ] && wc -l data/modeling_dataset.csv || echo "data/modeling_dataset.csv missing"
           [ -f logs_build_modeling_dataset.txt ] && wc -l logs_build_modeling_dataset.txt || echo "logs_build_modeling_dataset.txt missing"
 
-      # Enrich with scores so points_scored exists for downstream jobs
-      - name: Enrich dataset with points_scored (if scores available)
+      # Minimal, robust enrichment: add points_scored from game_scores_clean.csv
+      - name: Inject points_scored (if scores available)
         run: |
           set -e
           if [ ! -f data/modeling_dataset.csv ]; then
             echo "ERROR: data/modeling_dataset.csv missing"; exit 2
           fi
           if [ ! -f data/game_scores_clean.csv ]; then
-            echo "NOTE: data/game_scores_clean.csv not found; skipping enrichment."
-            exit 0
+            echo "NOTE: data/game_scores_clean.csv not found; skipping enrichment."; exit 0
           fi
           python - <<'PY'
 import pandas as pd
-from pathlib import Path
 
-mod_p = Path("data/modeling_dataset.csv")
-sc_p  = Path("data/game_scores_clean.csv")
+m = pd.read_csv('data/modeling_dataset.csv')
+s = pd.read_csv('data/game_scores_clean.csv', usecols=['game_id','team','points_scored','points_allowed'])
 
-df = pd.read_csv(mod_p)
-sc = pd.read_csv(sc_p)
+if 'game_id' not in m.columns or 'team' not in m.columns:
+    raise SystemExit("ERROR: modeling_dataset.csv must have 'game_id' and 'team'.")
 
-def norm(s): return s.astype(str).str.strip().str.lower()
+# normalize keys
+m['game_id'] = m['game_id'].astype(str)
+s['game_id'] = s['game_id'].astype(str)
+m['__t'] = m['team'].astype(str).str.strip().str.lower()
+s['__t'] = s['team'].astype(str).str.strip().str.lower()
 
-# Require keys
-missing = [c for c in ("game_id","team") if c not in df.columns]
-if missing:
-    raise SystemExit(f"ERROR: modeling_dataset.csv missing needed columns: {missing}")
+# de-dup scores and merge
+s_small = s.drop_duplicates(subset=['game_id','__t'])[['game_id','__t','points_scored','points_allowed']]
+m = m.merge(s_small, on=['game_id','__t'], how='left')
+m.drop(columns='__t', inplace=True)
 
-if not {"game_id","team"}.issubset(sc.columns):
-    raise SystemExit("ERROR: game_scores_clean.csv must include 'game_id' and 'team'")
-
-pre = df["points_scored"].notna().sum() if "points_scored" in df.columns else 0
-
-df["_gid"]  = df["game_id"].astype(str)
-df["_team"] = norm(df["team"])
-sc["_gid"]  = sc["game_id"].astype(str)
-sc["_team"] = norm(sc["team"])
-
-keep = ["_gid","_team"]
-for c in ("points_scored","points_allowed"):
-    if c in sc.columns: keep.append(c)
-
-sc_small = sc[keep].drop_duplicates(subset=["_gid","_team"])
-df = df.merge(sc_small, on=["_gid","_team"], how="left").drop(columns=["_gid","_team"])
-
-df.to_csv(mod_p, index=False)
-
-post = df["points_scored"].notna().sum() if "points_scored" in df.columns else 0
-print(f"[enrich] points_scored_non_null: before={pre} after={post} total_rows={len(df)}")
-PY
-          echo "--- header check ---"
-          head -n1 data/modeling_dataset.csv | tr ',' '\n' | nl | sed -n '1,120p'
-          echo "--- points_scored non-null count ---"
-          python - <<'PY'
-import pandas as pd
-df = pd.read_csv("data/modeling_dataset.csv", usecols=lambda c: c == "points_scored")
-print(df["points_scored"].notna().sum() if "points_scored" in df.columns else 0)
+m.to_csv('data/modeling_dataset.csv', index=False)
+print("points_scored non-null:", int(m['points_scored'].notna().sum()))
 PY
 
       - name: Commit and push artifacts
