--- a/.github/workflows/fill_stadiums.yml
+++ b/.github/workflows/fill_stadiums.yml
@@ -2,41 +2,44 @@ name: Fill Stadiums Metadata
 
 on:
   workflow_dispatch:
-
-permissions:
-  contents: write    # required to push updates
+    inputs:
+      min_fuzzy:
+        description: "Min fuzzy match score (0-100)"
+        required: false
+        default: "90"
+  push:
+    paths:
+      - "scripts/fill_stadiums_from_cfbd.py"
+      - "data/reference/stadiums.csv"
 
 jobs:
-  fill-stadiums:
+  fill:
     runs-on: ubuntu-latest
-
+    env:
+      CFBD_API_KEY: ${{ secrets.CFBD_API_KEY }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
+      - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          python -m pip install pandas requests
+          pip install pandas requests rapidfuzz
 
-      - name: Run stadium filler
-        env:
-          CFBD_API_KEY: ${{ secrets.CFBD_API_KEY }}
+      - name: Fill missing lat/lon/tz/altitude
         run: |
-          python scripts/fill_stadiums_from_cfbd.py
+          set -euo pipefail
+          python scripts/fill_stadiums_from_cfbd.py \
+            --stadiums data/reference/stadiums.csv \
+            --min-fuzzy "${{ github.event.inputs.min_fuzzy || 90 }}"
 
-      - name: Commit and push updated stadiums.csv
+      - name: Commit changes (if any)
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --global --add safe.directory "$GITHUB_WORKSPACE"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add data/reference/stadiums.csv
-          git commit -m "Auto-update stadiums.csv from CFBD API [skip ci]" || echo "No changes to commit"
+          git diff --staged --quiet || git commit -m "chore(stadiums): fill metadata from CFBD [skip ci]" || echo "No changes to commit"
           git push
