--- a/.github/workflows/sync_stadiums.yml
+++ b/.github/workflows/sync_stadiums.yml
@@ -7,6 +7,9 @@ on:
       - "scripts/sync_stadiums_to_teams.py"
       - "data/reference/stadiums.csv"
 
+permissions:
+  contents: write
+
 jobs:
   sync:
     runs-on: ubuntu-latest
@@ -29,64 +32,37 @@ jobs:
       - name: Generate diagnostic summary
         run: |
           python - << 'PY'
-          import pandas as pd, os, textwrap, datetime as dt
+          import pandas as pd, os, datetime as dt
           path = "data/reference/stadiums.csv"
           out_dir = "summaries"
           os.makedirs(out_dir, exist_ok=True)
           stamp = dt.datetime.utcnow().isoformat() + "Z"
 
-          def pct(n, d): 
-              return f"{(100*n/d):.1f}%" if d else "n/a"
-
-          try:
-              df = pd.read_csv(path)
-          except FileNotFoundError:
-              open(f"{out_dir}/sync_stadiums_summary.txt","w").write(
-                  f"[{stamp}] ERROR: {path} not found.\n"
-              )
-              raise
-
+          df = pd.read_csv(path)
           total = len(df)
           cols_req = ["team","venue","city","state","country","lat","lon","timezone","altitude_m","is_neutral_site","notes"]
           for c in cols_req:
               if c not in df.columns:
                   df[c] = pd.NA
 
-          # Missing metrics
           miss = df[["lat","lon","timezone","altitude_m"]].isna().sum().to_dict()
-          any_missing = df[["lat","lon","timezone","altitude_m"]].isna().any(axis=1)
-          missing_rows = df.loc[any_missing, ["team","venue","city","state","lat","lon","timezone","altitude_m"]]
-          sample_missing = missing_rows.head(50)
+          dupes = df[df["team"].astype(str).str.strip().duplicated(keep=False)].sort_values("team")
 
-          # Basic uniqueness / duplicates
-          teams = df["team"].astype(str).str.strip()
-          dupes = df[teams.duplicated(keep=False)].sort_values("team")
-          dup_ct = dupes["team"].nunique()
-
-          # Build report
           lines = []
           lines.append(f"[{stamp}] Sync Diagnostics")
           lines.append(f"File: {path}")
           lines.append(f"Total rows: {total}")
           lines.append("")
-          lines.append("Required columns present: " + ", ".join(sorted(set(cols_req) & set(df.columns))))
-          lines.append("")
           lines.append("Missing counts:")
           for k in ["lat","lon","timezone","altitude_m"]:
-              lines.append(f"  {k}: {miss.get(k,0)} ({pct(miss.get(k,0), total)})")
+              lines.append(f"  {k}: {miss.get(k,0)}")
           lines.append("")
-          lines.append(f"Teams with duplicated names: {dup_ct}")
-          if dup_ct:
+          lines.append(f"Duplicated team names: {dupes['team'].nunique() if not dupes.empty else 0}")
+          if not dupes.empty:
               lines.append(dupes[["team","venue","city","state"]].to_string(index=False))
-              lines.append("")
-          lines.append("Up to 50 rows with any missing lat/lon/timezone/altitude_m:")
-          if not sample_missing.empty:
-              lines.append(sample_missing.to_string(index=False))
-          else:
-              lines.append("  None")
-          report = "\n".join(lines)
-          with open(f"{out_dir}/sync_stadiums_summary.txt","w") as f:
-              f.write(report)
+
+          with open(f"{out_dir}/sync_stadiums_summary.txt","w", encoding="utf-8") as f:
+              f.write("\n".join(lines) + "\n")
           PY
 
       - name: Commit changes (if any)
