--- a/.github/workflows/fill_stadiums.yml
+++ b/.github/workflows/fill_stadiums.yml
@@ -1,4 +1,3 @@
-# .github/workflows/fill_stadiums.yml
 name: Fill Stadiums Metadata
 
 on:
@@ -26,11 +25,11 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install pandas requests rapidfuzz
+          pip install pandas requests rapidfuzz timezonefinder
 
       - name: Fill missing lat/lon/tz/altitude
         run: |
-          python scripts/fill_stadiums_from_cfbd.py --stadiums data/reference/stadiums.csv
+          python scripts/fill_stadiums_from_cfbd.py --stadiums data/reference/stadiums.csv --min-fuzzy 80
 
       - name: Generate diagnostic summary
         run: |
@@ -43,8 +42,7 @@ jobs:
 
           df = pd.read_csv(path)
           total = len(df)
-          cols_req = ["team","venue","city","state","country","lat","lon","timezone","altitude_m","is_neutral_site","notes"]
-          for c in cols_req:
+          for c in ["team","venue","city","state","country","lat","lon","timezone","altitude_m","is_neutral_site","notes"]:
               if c not in df.columns:
                   df[c] = pd.NA
 
@@ -61,11 +59,7 @@ jobs:
               lines.append("  " + k + ": " + str(miss.get(k,0)))
           lines.append("")
           lines.append("Rows still missing (up to 200):")
-          if remaining.empty:
-              lines.append("  None")
-          else:
-              # Avoid pandas to_string kwargs for broad version compatibility
-              lines.append(str(remaining.head(200)))
+          lines.append("  None" if remaining.empty else str(remaining.head(200)))
 
           with open(os.path.join(out_dir, "fill_stadiums_summary.txt"), "w", encoding="utf-8") as f:
               f.write("\n".join(lines) + "\n")
